--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <a class="nav-link" href="#precios">Precios</a>
                     </li>
                     <li class="nav-item">
-                        <button class="btn btn-primary ms-2" onclick="mostrarRegistro()">Registrarse</button>
+                        <a class="btn btn-primary ms-2" href="https://forms.gle/ypAtHRMRVck2Sf2bA" target="_blank">Registrarse</a>
                     </li>
                 </ul>
             </div>
@@ -38,9 +38,9 @@
                 <div class="col-lg-6">
                     <h1>Encuentra el cuidador perfecto para tu mascota</h1>
                     <p class="lead">Cuidadores verificados y amantes de los animales cerca de ti</p>
-                    <button class="btn btn-primary btn-lg" onclick="mostrarBusqueda()">
+                    <a href="https://forms.gle/ypAtHRMRVck2Sf2bA" target="_blank" class="btn btn-primary btn-lg">
                         Buscar cuidadores
-                    </button>
+                    </a>
                 </div>
                 <div class="col-lg-6">
                     <img src="https://images.unsplash.com/photo-1450778869180-41d0601e046e?auto=format&fit=crop&w=800" alt="Mascota feliz" class="img-fluid rounded shadow">
@@ -79,27 +79,6 @@
         </div>
     </section>
 
-    <!-- Modal de Registro -->
-    <div class="modal fade" id="registroModal" tabindex="-1">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">¡Únete a PetBnB!</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                </div>
-                <div class="modal-body">
-                    <form id="registroForm">
-                        <div class="mb-3">
-                            <input type="email" class="form-control" placeholder="Tu email" required>
-                        </div>
-                        <button type="submit" class="btn btn-primary w-100">Notificarme cuando lancemos</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/main.js"></script>
 </body>
 </html> 
