--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>PetBnB - Hospedaje para Mascotas</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <title>PetBnB - Hospedaje para Mascotas</title>
+        <!-- Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-9YS7CC1Z4V"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-9YS7CC1Z4V');
+        </script>
+        <!-- Fin Google Analytics -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/styles.css">
+    </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
@@ -24,7 +33,15 @@
                         <a class="nav-link" href="#precios">Precios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-primary ms-2" href="https://forms.gle/ypAtHRMRVck2Sf2bA" target="_blank">Registrarse</a>
+                        <a class="btn btn-primary ms-2" 
+                           href="https://forms.gle/ypAtHRMRVck2Sf2bA" 
+                           target="_blank"
+                           onclick="gtag('event', 'registro', {
+                             'event_category': 'conversión',
+                             'event_label': 'navbar_registro'
+                           });">
+                            Registrarse
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -38,7 +55,13 @@
                 <div class="col-lg-6">
                     <h1>Encuentra el cuidador perfecto para tu mascota</h1>
                     <p class="lead">Cuidadores verificados y amantes de los animales cerca de ti</p>
-                    <a href="https://forms.gle/ypAtHRMRVck2Sf2bA" target="_blank" class="btn btn-primary btn-lg">
+                    <a href="https://forms.gle/ypAtHRMRVck2Sf2bA" 
+                       target="_blank" 
+                       class="btn btn-primary btn-lg"
+                       onclick="gtag('event', 'búsqueda', {
+                         'event_category': 'conversión',
+                         'event_label': 'hero_buscar_cuidadores'
+                       });">
                         Buscar cuidadores
                     </a>
                 </div>
@@ -63,6 +86,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="feature-card">
+                        <img src="https://images.unsplash.com/photo-1628009368231-7bb7cf0a6250?auto=format&fit=crop&w=400" alt="Seguro" class="feature-img">
                         <img src="https://images.unsplash.com/photo-1629909613654-28e377c37b09?auto=format&fit=crop&w=400" alt="Seguro" class="feature-img">
                         <h3>Cobertura Veterinaria</h3>
                         <p>Tu mascota estará protegida durante toda su estadía</p>
